# SOFA_MCP

./: .gitignore  LICENSE  README.md  intro.md  pyproject.toml  skill_management.md  skill_test_prompts.txt
archiv/: tri_leg_inverse.py
docs/: feedback_2026-04-30_mor_trunk_session.md  plan.md  progress.md
docs/specs/: 2026-04-26-diagnose-scene-plan-v2.1.md  2026-04-30-rule7-and-utf8-plan.md  2026-05-02-m5-gate.md
docs/specs/diagnose-scene-research/: 2026-04-25-diagnose-scene-design-v2.md  2026-04-25-diagnose-scene-design.md  agent-prompts-pending.md  diagnose-scene-review-agent-2.md  diagnose-scene-review-agent-3.md  diagnose-scene-review-agent-5.md  diagnose-scene-review-agent-6.md  diagnose-scene-review-agent-7.md  diagnose-scene-review-agent-8.md  (+20 more)
meshes/: inner_0.stl  inner_1.stl  inner_2.stl  prostate.stl  prostate.vtk
sofa_mcp/: _log_compact.py  server.py
sofa_mcp/architect/: _summary_runtime_template.py  component_query.py  factory_utils.py  math_sandbox.py  mesh_generator.py  mesh_inspector.py  meshing_utils.py  plugin_cache.py  scene_writer.py
sofa_mcp/observer/: _diagnose_runner.py  _probe_runner.py  diagnostics.py  probes.py  renderer.py  stepping.py
sofa_mcp/optimizer/: patcher.py  test_patcher.py
test/: test_log_compact.py
test/test_architect/: test_component_query.py  test_math_sandbox.py  test_mcp_transport.py  test_mesh_inspector.py  test_scene_writer.py  test_summarize_rules.py
test/test_observer/: test_diagnose_e2e.py  test_diagnostics.py  test_inverse_authoring.py  test_probes.py  test_renderer.py  test_stepping.py
(+14 files in other folders)
